--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -509,7 +509,7 @@
                     <table class="table">
                         <thead class="thead-light">
                             <tr>
-                                <th> <mat-checkbox type="checkbox"  (click)="changeProductStatusAll()" [(ngModel)]="checked" ></mat-checkbox> </th>
+                                <th> <mat-checkbox type="checkbox" name="checked"  (click)="changeProductStatusAll()" [(ngModel)]="checked" ></mat-checkbox> </th>
                                 <th class="text-center">S.No</th>
                                 <th class="text-center">Action</th>
                                 <th class="text-center">HSNCode</th>
