--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -444,7 +444,17 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Amount</mat-label>
                         <input matInput name="Amount" type="number" min="0" [(ngModel)]="Service.Price"
-                            (blur)="calculations('TotalAmount', 'serviceTotal')" required #Amountcontrol>
+                            (blur)="calculations('Amount', 'serviceSubTotal')" required #Amountcontrol>
+                        <mat-error>
+                            Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>SubTotal</mat-label>
+                        <input matInput name="SubTotal" type="number" min="0" [(ngModel)]="Service.SubTotal" disabled
+                             required #SubTotalcontrol>
                         <mat-error>
                             Amount is required
                         </mat-error>
@@ -662,6 +672,7 @@
                                         <mat-icon class="deletes_icon ms-1" (click)="deleteItem('Service', i)">delete_forever</mat-icon>
                                     </button>
                                 </td>
+                                <td *ngIf="data.Status == 0"></td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                     class="text-center"></td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
@@ -676,7 +687,8 @@
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                    <td></td>
+                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
+                                    class="text-center">{{data.SubTotal | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                     class="text-center">{{data.GSTPercentage}}%</td>
                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
