--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -7,7 +7,7 @@
                     <div class="header p-0 py-0 pt-1">
                         <div class="row">
                             <div class="col-xl-1 col-lg-2 col-md-2 col-4 p-0 ms-3">
-                                <h2>Expense List </h2>
+                                <h2>Expenses List </h2>
                             </div>
                             <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
                                 <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
@@ -114,7 +114,7 @@
 <!-- model popup start -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h2 class="modal-title header pt-2" id="exampleModalLabel">Expense Info </h2>
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Expenses Info </h2>
         <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
             (click)="modal.dismiss('Cross click')">
         </button>
