--- a/web1/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web1/src/app/inventory/product-transfer/product-transfer.component.html
@@ -214,7 +214,7 @@
                                 <div class="col-xl-1 col-lg-1 col-md-2 col-3 ps-md-0 ps-1">
                                     <select class=" form-control"
                                       style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                                      [(ngModel)]="itemsPerPage" (change)="getList();">
+                                     name="itemsPerPage" [(ngModel)]="itemsPerPage" (change)="getList();">
                                       <option Value="10">Show 10 Row</option>
                                       <option Value="25">Show 25 Row</option>
                                       <option Value="50">Show 50 Row</option>
@@ -305,7 +305,7 @@
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Please Enter Confirmation Code
                         </mat-label>
-                        <input matInput name="secret" [(ngModel)]="xferAccept.secretCode" required>
+                        <input matInput name="secretCode" [(ngModel)]="xferAccept.secretCode" required>
                     </mat-form-field>
                 </div>
             </div>
@@ -314,7 +314,7 @@
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Remarks
                         </mat-label>
-                        <input matInput name="remark" [(ngModel)]="xferAccept.Remark" required>
+                        <input matInput name="Remark" [(ngModel)]="xferAccept.Remark" required>
                     </mat-form-field>
                 </div>
             </div>
