--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
-                                    <h2>Expense</h2>
+                                    <h2>Expenses</h2>
                                 </div>
                             </div>
                         </div>
