--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -161,10 +161,10 @@
                                                 {{spec.FieldName}}</mat-slide-toggle>
                                         </div>
                                     </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
+                                    <!-- <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
                                         <button type="submit" mat-raised-button color="primary">Search</button>
                                         <button type="button" (click)="deleteall()" class="ms-3"  mat-raised-button color="warn">Delete All</button>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </form>
                             <!-- form end -->
@@ -176,10 +176,10 @@
                                             style="border: 2px solid #fff !important;">
                                             <thead>
                                                 <tr class="text-center">
-                                                    <th>   
+                                                    <!-- <th>   
                                                         <mat-checkbox color="primary" (click)="selectAllPreorder('all')">
                                                         </mat-checkbox>
-                                                   </th>
+                                                   </th> -->
                                                     <th>Action</th>
                                                     <th>S.No</th>
                                                     <th>ProductName</th>
@@ -200,9 +200,9 @@
                                             <tbody>
                                                 <tr class="text-center" *ngFor="let data of dataList let i = index;"
                                                     style="white-space: nowrap;">
-                                                    <td>
+                                                    <!-- <td>
                                                         <mat-checkbox color="primary" [(ngModel)]="data.Checked" name="{{i + 'name'}}" [checked]="data.Checked" [ngModelOptions]="{standalone: true}" (click)="singleSelectPreOrder(i)" ></mat-checkbox>
-                                                    </td>
+                                                    </td> -->
                                                     <td style="width: 5%;">
                                                         <button *ngIf="!data.UpdateProduct" class="bg-btn"
                                                             (click)="showInput(data)">
