--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -388,7 +388,7 @@
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
-                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+                <button  class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
             </div>
            </div>
         </form>
