--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -161,10 +161,10 @@
                                                 {{spec.FieldName}}</mat-slide-toggle>
                                         </div>
                                     </div>
-                                    <!-- <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
                                         <button type="submit" mat-raised-button color="primary">Search</button>
-                                        <button type="button" (click)="deleteall()" class="ms-3"  mat-raised-button color="warn">Delete All</button>
-                                    </div> -->
+                                        <!-- <button type="button" (click)="deleteall()" class="ms-3"  mat-raised-button color="warn">Delete All</button> -->
+                                    </div>
                                 </div>
                             </form>
                             <!-- form end -->
