--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -66,7 +66,7 @@
                 </a>
               <a *ngIf="viewFlag.viewLoginHistory" href="javascript:void(0)" [routerLink]="['/admin/companyLoginHistory']" id="collapseExample">Login
                 History</a>
-              <a *ngIf="viewFlag.viewRecycleBin" href="#">Recycle-Bin</a>
+              <a *ngIf="viewFlag.viewRecycleBin" href="javascript:void(0)" [routerLink]="['/admin/CompanyDashborad']">Recycle-Bin</a>
             </div>
           </div>
           <!-- companyadmin end Administration -->
