--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.css
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.css
@@ -1,5 +1,8 @@
 .mat-icon {
-    pointer-events: none;
+    pointer-events: none !important;
+  }
+i {
+    pointer-events: none !important;
   }
 
 .bg-none{
