--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -3,7 +3,7 @@
 
 <body>
 
-    <% if (data.companysetting.BillHeader == 3){%>
+    <% if (data.billformate.BillHeader == 3){%>
         <header class="headerSize" >
             <div class="row">
                 <div class="col1">
